# f1-fantasy-team-optimiser

./: .gitignore  README.md  pyproject.toml
app/: backtest.py  config.py
app/data/: clean.py  ingest.py  schemas.py  scoring_rules.py  targets.py
app/features/: build_constructor_features.py  build_driver_features.py  build_historic_features.py  build_practice_features.py  utils.py
app/interface/: cli.py
app/models/: compose.py  configs.py  evaluation.py  predict.py  train.py
app/optimiser/: team_optimiser.py
data/raw/fantasy_prices/: 2023_01.csv  2023_02.csv  2023_03.csv  2023_04.csv  2023_05.csv  2023_06.csv  2023_07.csv  2023_08.csv  2023_09.csv  2023_10.csv  2023_11.csv  2023_12.csv  2023_13.csv  2023_14.csv  2023_15.csv  2023_16.csv  2023_17.csv  2023_18.csv  2023_19.csv  2023_20.csv  2023_21.csv  2023_22.csv  2024_01.csv  2024_02.csv  2024_03.csv  2024_04.csv  2024_05.csv  2024_06.csv  2024_07.csv  2024_08.csv  2024_09.csv  2024_10.csv  2024_11.csv  2024_12.csv  2024_13.csv  2024_14.csv  2024_15.csv  2024_16.csv  2024_17.csv  2024_18.csv  (+34 more)
notebooks/: finish_position_modelling.ipynb  quali_position_modelling.ipynb
src/: config.py  ingest.py
