[project]
name = "f1-fantasy-optimiser"
version = "0.1.0"
description = "ML pipeline to predict F1 fantasy points and optimise team selection"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "joblib>=1.3",
    "xgboost>=2.0",
    "pulp>=2.7",
    "matplotlib>=3.7",
    "pandera>=0.19",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "ipykernel>=6.0",
    "notebook>=7.0",
    "seaborn>=0.13",
]

[tool.ruff]
line-length = 100
